Revision history for Verilator

The contributors that suggested a given feature are shown in []. Thanks!


* Verilator 4.035 devel

**    OPT_FAST is now -Os by default. See the BENCHMARKING & OPTIMIZATION part
      of the manual if you experience issues with compilation speed.

***   Add --waiver-output flag that writes a verilator config file (.vlt) with
      waivers to the warnings emitted during a Verilator run.

***   Support verilator_coverage --write-info for lcov HTML reports.

****  Support multi channel descriptor I/O (#2190) [Stephen Henry]

****  Support $countbits. (#2287) [Yossi Nivin]

****  Support $isunbounded and parameter $. (#2104)

****  Support unpacked array .sum and .product.

****  Support prefix/postfix increment/decrement. (#2223) [Maciej Sobkowski]

****  Fix FST tracing of little bit endian signals. [Geza Lore]

****  Fix +: and -: on unpacked arrays. (#2304) [engr248]

****  Fix $isunknown with constant Z's.

****  Fix queues and dynamic array wide ops. (#2352) [Vassilis Papaefstathiou]

****  --output-split is now on by default. VM_PARALLEL_BUILDS is set by
      default iff the --output-split caused an actual file split to occur.
      --output-split-cfuncs and --output-split-ctrace now default to the
      value of --output-split. These changes should improve build times of
      medium and large designs with default options. User makefiles may
      require changes.

****  The run-time library is now compiled with -Os by default. (#2369, #2373)


* Verilator 4.034 2020-05-03

**    Add simplistic class support with many restrictions, see manual. (#377)

**    Support IEEE time units and time precisions. (#234)
      Includes `timescale, $printtimescale, $timeformat.
      VL_TIME_MULTIPLIER, VL_TIME_PRECISION, VL_TIME_UNIT have been removed
      and the time precision must now match the SystemC time precision. To
      get closer behavior to older versions, use e.g. --timescale-override
      "1ps/1ps".
