@@ -596,6 +596,8 @@ public:
     static string getenvSYSTEMC_INCLUDE();
     static string getenvSYSTEMC_LIBDIR();
     static string getenvVERILATOR_ROOT();
+    static bool systemCSystemWide();
+    static bool systemCFound();  // SystemC installed, or environment points to it
 
     // METHODS (file utilities using these options)
     string fileExists(const string& filename);
